<resources>
    <string name="app_name">ColorQQ2</string>
    <string name="back">返回</string>
    <string name="tip">提示</string>
    <string name="module_setting">模块设置</string>
    <string name="chat_setting">聊天界面设置</string>
    <string name="drawer_setting">侧滑设置</string>
    <string name="tab_setting">底栏设置</string>
    <string name="top_setting">顶栏设置</string>
    <string name="ok">确定</string>
    <string name="select_theme_color">选择主题颜色</string>
    <string name="select_color">选择颜色</string>
    <string name="cancel">取消</string>
    <string name="preset">预置颜色</string>
    <string name="diy_color">自定义颜色</string>
    <string name="theme">Theme</string>
    <string name="theme_en">我的主题</string>
    <string name="fab">Fab</string>
    <string name="fab_en">悬浮按钮</string>
    <string name="tablayout">TabLayout</string>
    <string name="topbar_en">顶栏</string>
    <string name="module">Module</string>
    <string name="module_en">我的模块</string>
    <string name="chat">Chat</string>
    <string name="chat_en">聊天</string>
    <string name="drawer">Drawer</string>
    <string name="drawer_en">侧滑</string>
    <string name="tab_en">底栏</string>
    <string name="topbar">Topbar</string>
    <string name="chat_edit_setting">输入框设置</string>
    <string name="chat_start_diy">启用自定义输入框</string>
    <string name="chat_hint_color_setting">设置提示语颜色</string>
    <string name="chat_def_hint">这是一个提示语</string>
    <string name="chat_hint_setting">设置文本框提示语</string>
    <string name="drawer_mode_select_string">默认,缩放式侧滑</string>
    <string name="drawer_mode_select">侧滑样式选择</string>
    <string name="drawer_other_setting">其他设置</string>
    <string name="drawer_djc_circle">叠加层圆角</string>
    <string name="drawer_hide_eve">隐藏阴影</string>
    <string name="drawer_sf">缩放式侧滑</string>
    <string name="drawer_start_djc">启用叠加层</string>
    <string name="drawer_add_djc">在侧滑右侧添加白色叠加层</string>
    <string name="drawer_diy_padding">自定义侧滑边距</string>
    <string name="drawer_padding">侧滑边距</string>
    <string name="drawer_padding_summary">修改侧滑完全展开时右侧距离屏幕边缘的距离</string>
    <string name="fab_base_setting">基础设置</string>
    <string name="fab_start">启用悬浮按钮</string>
    <string name="fab_color">悬浮按钮颜色</string>
    <string name="fab_color_option">跟随主题色,自定义颜色</string>
    <string name="fab_diy_color_setting">设置自定义颜色</string>
    <string name="tips">提示</string>
    <string name="fab_can_move">悬浮按钮可移动</string>
    <string name="fab_ic">悬浮按钮图标</string>
    <string name="fab_ic_tips">图标文件保存在：内存卡/QQColor2/fab，可自行修改。所有悬浮按钮图标需要放到此目录内才能生效。</string>
    <string name="fab_theme_color">主题色</string>
    <string name="fab_theme_color_tips">跟随主题色后悬浮按钮将与主题skin_color_title_immersive_bar.xml颜色相同</string>
    <string name="module_base_setting">基础设置</string>
    <string name="module_stop">停用模块</string>
    <string name="module_stop_tips">开启后停用模块所有功能</string>
    <string name="module_hide_app">隐藏桌面图标</string>
    <string name="module_hide_app_tips">隐藏后可通过Xposed Installer进入模块</string>
    <string name="fab_button_setting_tips">按钮配置</string>
    <string name="fab_menu_setting">主菜单按钮配置</string>
    <string name="fab_button_setting">子菜单按钮配置</string>
    <string name="fab_menu_ic_name_tip">背景图标名称</string>
    <string name="fab_menu_right_tip">距离屏幕右边距离</string>
    <string name="fab_menu_bottom_tip">距离屏幕底部距离</string>
    <string name="preset_icon">预置图标</string>
    <string name="dp">尺寸</string>
    <string name="color">颜色</string>
    <string name="svg_pic_name">图片名称</string>
    <string name="fab_config">配置文件</string>
    <string name="fab_config_tips">配置文件保存在：内存卡/QQColor2/fab/config.json，如果懂json语法可直接修改；配置文件被删除，fab功能将无法正常生效。</string>
    <string name="fab_type">按钮类型</string>
    <string name="fab_preset_button">预置按钮</string>
    <string name="fab_order">属性说明</string>
    <string name="fab_introduce">属性说明</string>
    <string name="tab_start_summary">启用后将强制关闭默认底栏看点功能，若关闭看点失败请手动关闭，否则会出现无法进入空间的bug</string>
    <string name="drawer_diy">自定义侧栏</string>
    <string name="drawer_head_color">昵称/签名颜色</string>
    <string name="drawer_item_color">侧滑Item文字颜色</string>
    <string name="drawer_ban_hint">禁用图标着色</string>
    <string name="drawer_ban_hint_summary">关闭时图标被染为item颜色</string>
    <string name="drawer_diy_item">配置侧栏</string>


</resources>
