<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/base_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <me.qiwu.colorqq.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title_text="悬浮按钮设置"/>
    <me.qiwu.colorqq.widget.FlexLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:scrollbars="none"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <me.qiwu.colorqq.widget.HeaderPreference
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header_color="?attr/colorAccent"
                    app:header="@string/fab_base_setting"/>
                <me.qiwu.colorqq.widget.SwitchPreference
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:switch_color="?attr/colorAccent"
                    app:title="@string/fab_start"
                    app:key="fab_use"/>
                <me.qiwu.colorqq.widget.SwitchPreference
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/fab_can_move"
                    app:switch_color="?attr/colorAccent"
                    app:key="fab_touch_moveBotton"/>
                <me.qiwu.colorqq.widget.SelectItem
                    android:id="@+id/fab_color_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:select_key="fab_mode"
                    app:select_text="@string/fab_color"
                    app:select_options="@string/fab_color_option"/>
                <me.qiwu.colorqq.widget.ColorPreference
                    android:id="@+id/fab_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:color_text="@string/fab_diy_color_setting"
                    app:color_default_color="#ff009688"
                    app:color_key="fab_mainColor"/>
                <me.qiwu.colorqq.widget.ColorPreference
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:color_text="设置文字颜色"
                    app:color_default_color="#fff"
                    app:color_key="fab_textColor"/>

                <me.qiwu.colorqq.widget.HeaderPreference
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="@string/fab_button_setting_tips"
                    app:header_color="?attr/colorAccent"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="jumpToMenuSetting"
                    app:arrow_title="@string/fab_menu_setting"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="jumpToButtonSetting"
                    app:arrow_title="@string/fab_button_setting"/>

                <me.qiwu.colorqq.widget.HeaderPreference
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="重置"
                    app:header_color="?attr/colorAccent"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:onClick="resetFabIcons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:arrow_title="重置图标"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="resetFabData"
                    app:arrow_title="重置子菜单数据"/>

                <me.qiwu.colorqq.widget.HeaderPreference
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="@string/tips"
                    app:header_color="?attr/colorAccent"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:arrow_title="@string/fab_ic"
                    app:arrow_summary="@string/fab_ic_tips"
                    app:arrow_show_ic="false"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:arrow_title="@string/fab_config"
                    app:arrow_summary="@string/fab_config_tips"
                    app:arrow_show_ic="false"/>
                <me.qiwu.colorqq.widget.ArrowItem
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:arrow_title="@string/fab_theme_color"
                    app:arrow_summary="@string/fab_theme_color_tips"
                    app:arrow_show_ic="false"/>
            </LinearLayout>
        </ScrollView>
    </me.qiwu.colorqq.widget.FlexLayout>
</LinearLayout>