<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/base_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <me.qiwu.colorqq.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:title_text="@string/chat_setting"
        app:is_show_exit="true"/>
    <me.qiwu.colorqq.widget.FlexLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <me.qiwu.colorqq.widget.HeaderPreference
                    android:layout_marginTop="@dimen/default_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:header="@string/chat_edit_setting"
                    app:header_color="?attr/colorAccent"/>
                <me.qiwu.colorqq.widget.SwitchPreference
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:key="chat_edit_start"
                    app:switch_color="?attr/colorAccent"
                    app:title="@string/chat_start_diy"/>
                <me.qiwu.colorqq.widget.TextItem
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/chat_hint_setting"
                    app:right_text="@string/chat_def_hint"
                    app:text_key="chat_hint"/>
                <me.qiwu.colorqq.widget.ColorPreference
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:color_text="@string/chat_hint_color_setting"
                    app:color_default_color="#66666666"
                    app:color_key="chat_hint_color"/>
            </LinearLayout>
        </ScrollView>
    </me.qiwu.colorqq.widget.FlexLayout>
</LinearLayout>