<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/base_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <me.qiwu.colorqq.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        app:is_show_exit="true"
        app:title_text="@string/fab_menu_setting"/>
    <me.qiwu.colorqq.widget.FlexLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <RelativeLayout
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_toLeftOf="@id/fab_menu_pic"
                    android:hint="@string/fab_menu_ic_name_tip"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/fab_menu_icName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <ImageView
                    android:id="@+id/fab_menu_pic"
                    android:src="@drawable/ic_pic"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginRight="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:onClick="selectIcon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/preset_icon" />
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/fab_menu_right_tip"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fab_menu_marginEnd"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/fab_menu_bottom_tip"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/fab_menu_marginBottom"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
    </me.qiwu.colorqq.widget.FlexLayout>
</LinearLayout>