<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSvgDp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:text="@string/dp"/>
        <TextView
            android:id="@+id/svg_dp_text"
            android:textSize="16sp"
            android:text="72x72"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSvgColor">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:text="@string/color"/>
        <ImageView
            android:id="@+id/svg_color"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/widget_color_item_circle"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/widget_color_item_stroke"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
    <LinearLayout
        android:paddingBottom="10dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:background="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setSvgName">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/title_color"
            android:textSize="16sp"
            android:text="@string/svg_pic_name"/>
        <TextView
            android:id="@+id/svg_pic_text"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginLeft="30dp"
            android:layout_gravity="center_vertical|right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>